added new pages and changed routing

--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,26 @@
+<app-navbar></app-navbar>
+<div class="container">
 <div class="row">
-	<app-about class="col-6"></app-about>
-	<app-search class="col-6"></app-search>
+	<div class="card-deck">
+		<div class="card text-center">
+			<div class="card-body">
+				<a href="rate-playlist"><h5 class="card-title">Rate Playlist</h5></a>
+			  <p class="card-text">Select a playlist and we'll tell you what mood(s) it encompasses</p>
+			</div>
+		  </div>
+		  <div class="card text-center">
+			<div class="card-body">
+				<a href="build-playlist"><h5 class="card-title">Build Playlist</h5></a>
+			  <p class="card-text">Select a mood, and we'll build an ideal playlist from your current Spotify library.</p>
+			</div>
+		  </div>
+		  <div class="card text-center">
+			  
+			<div class="card-body">
+				<a href="compare"><h5 class="card-title">Compare</h5></a>
+			  <p class="card-text">Give us two playlist links and we'll compare them.</p>
+			</div>
+		  </div>
+	  </div>
+</div>
 </div>
