added routes for browse/search and about pages

--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <!--TODO: Define click callback to load about me information-->
 <button (click)= "onClick()" class="btn btn-light">Load info about me</button>
 <!--TODO: replace ??? to bind to name-->
