--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <h1>Search Spotify</h1>
 <!--TODO: bind input's model to searchString-->
 <input [(ngModel)]="searchString">
