--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,16 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item navbar-brand">
-      <a class="navbar-brand" href="/home">
-        Vibe-Rater
-      </a>
+<nav>
+  <ul class="nav-container">
+    <li><a href="/search">BROWSE</a></li>
+    <li><a class="nav-logo" href="/home">VIBE-RATER</a>
+      <ul class="sub-menu">
+        <li><a href="/rate-playlist">RATE</a></li>
+        <li><a href="/build-playlist">BUILD</a></li>
+        <li><a href="/compare">COMPARE</a></li>
+      </ul>
+    </li>
+    <li><a type="button" href="/about">
+        <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="user-icon" width="50"></a>
     </li>
   </ul>
 </nav>
+
