added playlist-list to rate playlist page

--- a/client/src/app/pages/rate-playlist/rate-playlist.component.html
+++ b/client/src/app/pages/rate-playlist/rate-playlist.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<p>
-  rate-playlist works!
-</p>
+<div class="col-6">
+    <h1>Select a playlist</h1>
+    <app-playlist-list [playlists]="playlists"></app-playlist-list>
+	</div>
