--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-<div class="row">
+<div class="row" style="padding:20px;">
 	<div class="card-deck">
 		<div class="card text-center">
 			<div class="card-body">
