--- a/client/src/app/pages/home-page/home-page.component.css
+++ b/client/src/app/pages/home-page/home-page.component.css
@@ -1,3 +1,32 @@
-.card {
-    color:black;
+.hero-intro {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+    width: 100%;
+}
+.hero-intro img{
+    width: inherit;
+}
+
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    padding-right: 10px;
+    width: inherit;
+}
+
+.card a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.card-body {
+    text-align: center;
+}
+.card-text {
+    padding-top: 10px;
+}
+
+.card-title {
+    color: #F47458;
 }
