--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -1,26 +1,41 @@
 <app-navbar></app-navbar>
-<div class="container">
-<div class="row">
+<body>
+	<div class="hero-intro">
+		<div class="hero-text">
+			<h1>Understand Your Playlists Better</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+		</div>
+		<img src="/assets/home-intro.svg" width="900">
+	</div>
+
 	<div class="card-deck">
-		<div class="card text-center">
+
+		<div class="card" style="width: 18rem;">
+		<a href="rate-playlist">
 			<div class="card-body">
-				<a href="rate-playlist"><h5 class="card-title">Rate Playlist</h5></a>
-			  <p class="card-text">Select a playlist and we'll tell you what mood(s) it encompasses</p>
+				<h3 class="card-title">RATE</h3>
+				<p class="card-text">Select a playlist and we'll tell you what mood(s) it encompasses</p>
 			</div>
-		  </div>
-		  <div class="card text-center">
+		</a>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+		<a href="build-playlist">
 			<div class="card-body">
-				<a href="build-playlist"><h5 class="card-title">Build Playlist</h5></a>
-			  <p class="card-text">Select a mood, and we'll build an ideal playlist from your current Spotify library.</p>
+				<h3 class="card-title">BUILD</h3>
+				<p class="card-text">Select a mood, and we'll build an ideal playlist from your current Spotify library.</p>
 			</div>
-		  </div>
-		  <div class="card text-center">
-			  
+		</a>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+		<a href="compare">
 			<div class="card-body">
-				<a href="compare"><h5 class="card-title">Compare</h5></a>
-			  <p class="card-text">Give us two playlist links and we'll compare them.</p>
+				<h3 class="card-title">COMPARE</h3>
+				<p class="card-text">Give us two playlist links and we'll compare them.</p>
 			</div>
-		  </div>
-	  </div>
-</div>
-</div>
+		</a>
+		</div>
+
+	</div>
+</body>
