added cards and mood selection to build playlist

--- a/client/src/app/pages/build-playlist/build-playlist.component.html
+++ b/client/src/app/pages/build-playlist/build-playlist.component.html
@@ -1,4 +1,73 @@
 <app-navbar></app-navbar>
-<div class="col-6">
-  <h1>Choose a mood</h1>
+<div class="container">
+<div class="row">
+  <div class="col-12">
+    <h1>Build a playlist</h1>
+    <p *ngIf="!showResults">Select a mood below, and we'll return a playlist of songs from your Spotify library that perfectly match.</p>
+    <p *ngIf="showResults">Here is your ideal <b>{{ mood }}</b> playlist:</p>
+  </div>
+</div>
+</div>
+
+<div class="container">
+  <h3 *ngIf="showResults">Try another mood:</h3>
+  <div class='row'>
+    <div class="col-md-3 col-sm-12">
+       <div class="card" (click)="selectMood('happy')">
+        <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Happy">
+        <div class="card-body">
+        <h5 class="card-title">Happy</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <div class="card" (click)="selectMood('sad')">
+      <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Sad">
+      <div class="card-body">
+      <h5 class="card-title">Sad</h5>
+      </div>
+    </div>
+    </div>
+    <div class="col-md-3 col-sm-12">
+     <div class="card" (click)="selectMood('energetic')">
+      <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Energetic">
+      <div class="card-body">
+      <h5 class="card-title">Energetic</h5>
+      </div>
+    </div>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <div class="card" (click)="selectMood('focus')">
+      <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Focus">
+      <div class="card-body">
+      <h5 class="card-title">Focus</h5>
+      </div>
+    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-sm-12">
+      <div class="card" (click)="selectMood('chill')">
+      <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Chill">
+      <div class="card-body">
+      <h5 class="card-title">Chill</h5>
+      </div>
+    </div>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <div class="card" (click)="selectMood('love')">
+      <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Love">
+      <div class="card-body">
+      <h5 class="card-title">Love</h5>
+      </div>
+    </div>
+    </div>
+    <div class="col-md-3 col-sm-12"><div class="card" (click)="selectMood('sleep')">
+      <img src="../../../assets/vr-logo@2x.png" class="card-img-top" alt="Sleep">
+      <div class="card-body">
+      <h5 class="card-title">Sleep</h5>
+      </div>
+    </div>
+    </div>
+</div>
 </div>
