search/browse, artist, album pages done!

--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,9 +1,11 @@
 <app-navbar></app-navbar>
-<!--TODO: replace ??? to bind to name-->
-<h3>Logged in user: {{name}}</h3>
-<!--TODO: bind img src's to profile_pic-->
-<img [src]="profile_pic">
-<p>
-	<!--TODO: bind link's href to profile_link-->
-	<a [href]="profile_link" class="btn btn-light" target="_blank">Open profile on Spotify</a>	
-</p>
+<body>
+	<!-- Bind to name -->
+	<h3>Logged in user: {{name}}</h3>
+	<!-- Bind img src's to profile_pic -->
+	<img [src]="profile_pic">
+	<p>
+		<!-- Bind link's href to profile_link -->
+		<a [href]="profile_link" class="btn btn-light" target="_blank">Open profile on Spotify</a>	
+	</p>
+</body>
