--- a/client/src/app/pages/sign-in-page/sign-in-page.component.html
+++ b/client/src/app/pages/sign-in-page/sign-in-page.component.html
@@ -1,3 +1,5 @@
 <title>Vibe-Rater</title>
-<h1>Vibe-Rater</h1>
-<a class="btn btn-light" role="button" href="http://localhost:8888/login">Log in</a>
+<body>
+    <h1>Vibe-Rater</h1>
+    <a class="btn btn-light" role="button" href="http://localhost:8888/login">Log in</a>
+</body>
