--- a/client/src/app/components/carousel/carousel.component.css
+++ b/client/src/app/components/carousel/carousel.component.css
@@ -1,7 +1,24 @@
+.carousel-container {
+	display: flex;
+	justify-content: center;
+}
 .carousel {
 	width: 400px;
 }
 
+.carousel-control-prev {
+	margin-left: -75px;
+}
+.carousel-control-next {
+	margin-right: -75px;
+}
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  filter: invert(1);
+}
+
+
 app-artist {
 	vertical-align: middle;
 }
+
