--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -19,7 +19,7 @@
 			<tr *ngFor="let track of tracks; let i=index">
 				<!--TODO: Populate with row index (start with 1!)-->
 				<td>{{i+1}}</td>
-				<td>
+				<td class="breaklines">
 					<!--TODO: link to the endpoint for that track, display the track's name-->
 					<a href="../../../track/{{track.id}}">{{track.name}}</a>
 				</td>
@@ -27,11 +27,11 @@
 				<td>{{track.duration_ms}}</td>
 				<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
 				<div *ngIf="!hideArtist">
-					<td><a href={{track.artists[0].url}}>{{track.artists[0].name}}</a></td>
+					<td class="breaklines"><a href="../../artist/{{track.artists[0].id}}">{{track.artists[0].name}}</a></td>
 				</div>
 				<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-				<div *ngIf="!hideArtist">
-					<td><a href={{track.album.url}}>{{track.album.name}}</a></td>
+				<div *ngIf="!hideAlbum">
+					<td class="breaklines"><a href="../../album/{{track.album.id}}">{{track.album.name}}</a></td>
 				</div>
 			</tr>
 	</tbody>
