--- a/client/src/app/pages/album-page/album-page.component.css
+++ b/client/src/app/pages/album-page/album-page.component.css
@@ -2,3 +2,13 @@
 	max-width: 100%;
 	max-height: 100%;
 }
+h1 {
+	text-align: center;
+	padding-bottom: 20px;
+}
+#artist-list {
+	margin-top: 20px;
+}
+#artist-button {
+	margin-bottom: -10px;
+}
