--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -1,22 +1,28 @@
-<div *ngIf="album" class="row">
-	<div class="col-6">
-		<!--TODO: populate with album name-->
+<app-navbar></app-navbar>
+<body>
+	<div *ngIf="album">
 		<h1>{{album.name}}</h1>
-		<!--TODO: set src to album image URL-->
-		<img [src]="album.imageURL" id="albumImg">
-		<!--TODO: loop over album artists-->
-		<p *ngFor="let artist of album.artists">
-			<!--TODO: link to artist page, display artist name-->
-			Artist: <a href="../../../artist/{{artist.id}}">{{artist.name}}</a>
-		</p>
-		<p *ngFor="let artist of album.artists">
-			<!--TODO: link to artist page on spotify, display artist name-->
-			<a href={{artist.url}} class="btn btn-light" role="button" target="_blank" >Open {{artist.name}} on Spotify</a>
-		</p>
+	<div class="row">
+		<div class="col-6">
+			<!--Loop over album artists-->
+			<!--Set src to album image URL-->
+			<img [src]="album.imageURL" id="albumImg">
+			<div id="artist-list">
+				<h5 *ngFor="let artist of album.artists">
+					<!--Link to artist page, display artist name-->
+					Artist: <a href="../../../artist/{{artist.id}}">{{artist.name}}</a>
+				</h5>
+			</div>
+			<p *ngFor="let artist of album.artists" id="artist-button">
+				<!--TODO: link to artist page on spotify, display artist name-->
+				<a href={{artist.url}} class="btn btn-light" role="button" target="_blank" >Open {{artist.name}} on Spotify</a>
+			</p>
+		</div>
+		<div class="col-6">
+			<h3>Album Tracks</h3>
+			<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
+			<app-track-list [tracks]="tracks" hideArtist=true hideAlbum=false></app-track-list>
+		</div>
 	</div>
-	<div class="col-6">
-		<h3>Album Tracks</h3>
-		<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
-		<app-track-list [tracks]="tracks" hideArtist=true hideAlbum=false></app-track-list>
 	</div>
-</div>
+</body>
