--- a/client/src/app/components/track-list/track-list.component.css
+++ b/client/src/app/components/track-list/track-list.component.css
@@ -2,8 +2,11 @@ table {
 	color: var(--dark);
 	max-width: 100%;
 }
-
+td, th {
+	text-align: start;
+	padding-right: 10px;
+}
 .breaklines {
 	word-wrap: break-word;
-	width: 50%;
+	width: 30%;
 }
