--- a/client/src/app/pages/track-page/track-page.component.html
+++ b/client/src/app/pages/track-page/track-page.component.html
@@ -1,29 +1,33 @@
-<div class="row">
-	<div *ngIf="track" class="col-6">
-		<!--TODO: populate with track name-->
-		<h1>{{track.name}}</h1>
-		<p>
-			<!--TODO: link to album page, display album name-->
-			Track on <a href="../../../album/{{track.album.id}}">{{track.album.name}}</a>
-		</p>
-		<div>
-			<!--TODO: loop over album's artists-->
-			<p *ngFor="let artist of track.album.artists">
-				<!--TODO: link to artist page, display artist name-->
-				Artist: <a href="../../../artist/{{artist.id}}">{{artist.name}}</a>
+<app-navbar></app-navbar>
+<body>
+<div *ngIf="track">
+	<h1 style="padding-bottom: 30px;">{{track.name}}</h1>
+	<div class="container">
+		<div class="track-desc">
+			<p>
+				<!--TODO: link to album page, display album name-->
+				<strong>Album: </strong> <a href="../../../album/{{track.album.id}}">{{track.album.name}}</a>
+			</p>
+			<div>
+				<!--TODO: loop over album's artists-->
+				<p *ngFor="let artist of track.album.artists">
+					<!--TODO: link to artist page, display artist name-->
+					<strong>Artist: </strong> <a href="../../../artist/{{artist.id}}">{{artist.name}}</a>
+				</p>
+			</div>
+			<p>
+				<!--TODO: populate with track duration-->
+				<strong>Duration: </strong>{{track.durationStr}}
+			</p>
+			<p>
+				<!--TODO: link to track page on spotify, display track name-->
+				<a [href]="track.url" class="btn btn-light" role="button" target="_blank">Open {{track.name}} on Spotify</a>
 			</p>
 		</div>
-		<p>
-			<!--TODO: populate with track duration-->
-			Duration: {{track.duration_ms}}
-		</p>
-		<p>
-			<!--TODO: link to track page on spotify, display track name-->
-			<a [href]="track.url" class="btn btn-light" role="button" target="_blank">Open {{track.name}} on Spotify</a>
-		</p>
-	</div>
-	<div *ngIf="audioFeatures" class="col-6">
-		<!--TODO: loop over types of features and create a thermometer component for each-->
-		<app-thermometer *ngFor="let feature of audioFeatures" [feature]="feature"></app-thermometer>
+		<div *ngIf="audioFeatures" class="col-sm-7">
+			<!--TODO: loop over types of features and create a thermometer component for each-->
+			<app-thermometer *ngFor="let feature of audioFeatures" [feature]="feature"></app-thermometer>
+		</div>
 	</div>
 </div>
+</body>
