--- a/client/src/app/pages/compare/compare.component.html
+++ b/client/src/app/pages/compare/compare.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<body>
 <div class="container">
   <div class="row">
     <div class="col-12">
@@ -31,3 +32,4 @@
     </div>
   </div>
 </div>
+</body>
