Completed most of moodAlgo service

--- a/client/src/app/pages/rate-playlist/rate-playlist.component.html
+++ b/client/src/app/pages/rate-playlist/rate-playlist.component.html
@@ -17,7 +17,7 @@
 <div class='container' *ngIf="showResults">
     <div class='row'>
         <div class="col-12">
-            <h3>~Vibes~ for {{ selectedPlaylist.name }}</h3>
+            <!-- <h3>~Vibes~ for {{ selectedPlaylist.name }}</h3> -->
         </div>
     </div>
 </div>
